# TextEditor

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh  utext
app/: CMakeLists.txt  main.cpp
app/res/: DarkMode.qss
app/src/: CMakeLists.txt  ClickableLabel.cpp  ClickableLabel.h  CodeEditor.cpp  CodeEditor.h  ErrorMessageBox.cpp  ErrorMessageBox.h  Highlighter.cpp  Highlighter.h  IncludeHeaders.h  LineNumberArea.cpp  LineNumberArea.h  ProjectsView.cpp  ProjectsView.h  ide_mainwindow.cpp  ide_mainwindow.h  ide_mainwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  optionswindow.cpp  optionswindow.h  optionswindow.ui  searchwindow.cpp  searchwindow.h  searchwindow.ui  tabWidget.cpp  tabWidget.h
